base/src/test/resources/failure/tyck/tele-prim-no-type.aya.txt
In file $FILE:2:5 ->

  1 | prim I
  2 | prim left (i : I)
           ^--^

Error: prim left is expected to have a type

1 error(s), 0 warning(s).
What are you doing?
